fixed overflow for tablet/mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
